# discord-bots-basic

./: discord-bots-hello-world.sln  readme.md
c/: CMakeLists.txt  main.c
c#/: DiscordBot.csproj  DiscordBot.sln  Program.cs
c#/commands/: Ping.cs
c#/events/: MessageReceived.cs  Ready.cs
c#/structures/: Discord.cs  ICommand.cs
c++/: .gitignore  CMakeLists.txt  CPM.txt  main.cpp
c++/commands/: ping.cpp  ping.h
c++/events/: message_create.cpp  message_create.h  ready.cpp  ready.h
c++/structures/: command.cpp  command.h  functions.cpp  functions.h
c/commands/: ping.c  ping.h
c/events/: on_message.c  on_message.h  on_ready.c  on_ready.h
c/structures/: functions.c  functions.h
dart/: main.dart  pubspec.yaml
elixir/: application.ex  bot.ex  mix.exs
go/: go.mod  main.go
go/commands/: ping.go
go/events/: messageCreate.go  ready.go
haskell/: .gitignore  haskell.cabal  hello.hs
java/: .gitignore  Index.java  Main.java  Register.java  build.gradle
java/commands/: Ping.java
java/events/: MessageReceived.java  Ready.java  SlashCommandInteraction.java
java/resources/: logback.xml
java/structures/: Command.java  CommandInfo.java  CommandInput.java  Discord.java  MessageInput.java  SlashCommandInput.java
julia/: Manifest.toml  Project.toml  hello.jl
kotlin/: .gitignore  Main.kt  build.gradle.kts
kotlin/commands/: Ping.kt
kotlin/events/: MessageCreate.kt  Ready.kt
kotlin/structures/: Command.kt  Discord.kt  Event.kt
lua/: bot.lua  deps.txt
php/: index.php
php/commands/: ping.php
php/events/: messageCreate.php  ready.php
python/: index.py
python/commands/: ping.py
python/events/: on_message.py  on_ready.py
ruby/: .gitignore  Gemfile  index.rb
ruby/commands/: ping.rb
ruby/events/: ready.rb
rust/: Cargo.toml  main.rs
rust/commands/: ping.rs
rust/events/: message.rs  ready.rs
scala/: .gitignore  build.sbt
swift/: Package.resolved  Package.swift  index.swift  main.swift
swift/commands/: ping.swift
swift/events/: messageCreate.swift  ready.swift
swift/structures/: Commands.swift
typescript/: index.ts  package-lock.json  package.json
typescript/commands/: ping.ts
typescript/events/: messageCreate.ts  ready.ts
typescript/structures/: Discord.ts
